[package]
name = "dnet"
version = "0.1.0"
edition = "2018"
default-run = "dnet-server"

[lib]
name = "dnet"
path = "src/lib.rs"

[[bin]]
name = "dnet-server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.1.2"
http = "0.2.4"
hyper = "0.14.11"
serde = { version = "1.0.127", features = ["derive"] }
tokio = { version = "1.9.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
