[package]
name = "dnet"
version = "0.1.0"
edition = "2018"
default-run = "dnet-server"

[lib]
name = "dnet"
path = "src/lib.rs"

[[bin]]
name = "dnet-server"
path = "src/bin/server.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
axum = { version = "0.1.2", features = ["ws", "headers", "multipart"] }
http = "0.2.4"
hyper = { version = "0.14.11", features = ["full"] }
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
tokio = { version = "1.9.0", features = ["full"] }
tower = { version = "0.4.8", features = ["full"] }
tower-http = "0.1.1"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
